--- a/Learny/Views/Courses/Details.cshtml
+++ b/Learny/Views/Courses/Details.cshtml
@@ -34,7 +34,7 @@
             {
                 <p>
                     @Html.ActionLink("Tillbaka till listan", "Index") |
-                    @Html.ActionLink("Lägg till modul", "Manage", "CourseModules", new { id = Model.Id }, null) |
+                    @Html.ActionLink("Lägg till modul", "Create", "CourseModules", new { id = Model.Id }, null) |
                     @Html.ActionLink("Ändra", "Edit", new { id = Model.Id})
                 </p>
             }
