--- a/Learny/Views/Shared/_Layout.cshtml
+++ b/Learny/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <title>@ViewBag.Title - Learny</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-
+    <link rel="stylesheet" href="~/Content/Style.css" />
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
