Do not show link to Create if not ListEdit

--- a/Learny/Views/CourseModules/Manage.cshtml
+++ b/Learny/Views/CourseModules/Manage.cshtml
@@ -108,7 +108,7 @@ else
     </div>
 }
 
-@if (Model.Edit)
+@if (Model.Edit && Model.ListEdit)
 {
 
     @Html.ActionLink("Ny modul", "Create", "CourseModules", new { id = Model.CourseId }, null)
