--- a/Learny/Views/Courses/ShowSchedule.cshtml
+++ b/Learny/Views/Courses/ShowSchedule.cshtml
@@ -11,10 +11,10 @@
 <table class="table">
     <tr>
         <th>
-            <h4>Start Datum</h4>
+            <h4>Datum</h4>
         </th>
         <th>
-            <h4>Slut Datum</h4>
+            <h4>Dag</h4>
         </th>
         <th>
             <h4>Modul Namn</h4>
