--- a/Learny/Views/Teacher/Manage.cshtml
+++ b/Learny/Views/Teacher/Manage.cshtml
@@ -1,4 +1,4 @@
-﻿@model Learny.ViewModels.TeacherViewModel
+﻿@model Learny.ViewModels.TeacherCreateViewModel
 
 @{
     ViewBag.Title = "Lägg till ny lärare";
@@ -48,10 +48,11 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Spara" class="btn btn-default" />
+                <input type="submit" value="Lägg till" class="btn btn-default" />
             </div>
         </div>
-    </div>
+    </div> 
+
 }
 
 @if (TempData["FeedbackMessage"] != null)
@@ -61,25 +62,19 @@
         @TempData["FeedbackMessage"]
         @{var msgObj = (Learny.ViewModels.TeacherViewModel)@TempData["FeedbackData"];}
         <br /><br />
-        @Html.LabelFor(m => msgObj.Name): @Html.DisplayFor(m => msgObj.Name)
+        @Html.LabelFor(m => msgObj.Name) @Html.DisplayFor(m => msgObj.Name)
         <br />
-        @Html.LabelFor(m => msgObj.Email): @Html.DisplayFor(m => msgObj.Email)
-        <br /><br />
-        @if (!Model.Edit)
-        {
-            @Html.ActionLink("Ändra |", "Edit", new { id = msgObj.Id, listEdit = true });
-            //|
-        }
-        @Html.ActionLink("Visa modul", "Details", "CourseModules", new { id = msgObj.Id }, null)
+        @Html.LabelFor(m => msgObj.Email) @Html.DisplayFor(m => msgObj.Email)
+
     </div>
 }
 
+<br />
+<hr />
+<h4>Lärare</h4>
+@Html.Action("ListTeachers", "Teacher")
 
-    <hr />
-    <h4>Lärare</h4>
-    @Html.Action("ListTeachers", "Teacher")
 
-
-    @section Scripts {
-        @Scripts.Render("~/bundles/jqueryval")
-    }
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
