--- a/Learny/Views/Courses/Details.cshtml
+++ b/Learny/Views/Courses/Details.cshtml
@@ -2,7 +2,7 @@
 @using Learny.Settings
 
 @{
-    ViewBag.Title = "Kurs detaljer";
+    ViewBag.Title = Model.FullCourseName;
 }
 
 <div class="container-fluid">
