--- a/Learny/Views/Courses/Details.cshtml
+++ b/Learny/Views/Courses/Details.cshtml
@@ -7,7 +7,8 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-sm-4">
+
+        <div class="col-sm-12">
 
             <h2>@Html.DisplayFor(model => model.FullCourseName)</h2>
 
@@ -23,21 +24,32 @@
                 @Html.DisplayFor(model => model.EndDate)
             </p>
 
+            @if (Request.IsAuthenticated && User.IsInRole(RoleName.teacher))
+            {
+                <p>
+                    @Html.ActionLink("Tillbaka till listan", "Index") |
+                    @Html.ActionLink("Ändra", "Edit", new { id = Model.Id })
+                </p>
+            }
+
+        </div>
+
+    </div>
+    <div class="row">
+
+        <div class="col-sm-4">
+            <h2>Moduler</h2>
+            @if (Request.IsAuthenticated && User.IsInRole(RoleName.teacher))
+            {
+                <p>@Html.ActionLink("Lägg till modul", "Create", "CourseModules", new { id = Model.Id }, null)</p>
+            }
+
             <ul>
                 @foreach (var item in Model.Modules)
                 {
                     <li>@Html.ActionLink(item.Name, "Details", "CourseModules", new { id = item.Id }, null)</li>
                 }
             </ul>
-
-            @if (Request.IsAuthenticated && User.IsInRole(RoleName.teacher))
-            {
-                <p>
-                    @Html.ActionLink("Tillbaka till listan", "Index") |
-                    @Html.ActionLink("Lägg till modul", "Create", "CourseModules", new { id = Model.Id }, null) |
-                    @Html.ActionLink("Ändra", "Edit", new { id = Model.Id})
-                </p>
-            }
         </div>
 
 
