Add style to navbar

--- a/Learny/Content/Site.css
+++ b/Learny/Content/Site.css
@@ -1,6 +1,49 @@
 ﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+    padding-top: 120px;
+    /*font: 400 15px Lato, sans-serif;*/
+    font-family: 'Roboto' ,sans-serif;
+    font-size: 15px;
+    line-height: 1.5;
+    color: #202020;
+}
+
+h2 {
+    font-family: 'Roboto',sans-serif;
+}
+
+.navbar {
+    margin-bottom: 0;
+    background: linear-gradient(#000000, #202020, #202020);
+    z-index: 9999;
+    /*background-color: #202020;*/
+    border: 0;
+    font-size: 18px !important;
+    letter-spacing: 3px;
+    border-radius: 0;
+    font-family: Montserrat, sans-serif;
+    padding: 15px 5px;
+}
+
+    .navbar li a, .navbar .navbar-brand {
+        color: #fff !important;
+    }
+
+.navbar-nav li a:hover, .navbar-nav li.active a {
+    color: gray !important;
+}
+
+.navbar-default .navbar-toggle {
+    border-color: transparent;
+    color: #fff !important;
+}
+
+@media (min-width: 768px) {
+
+    .navbar-nav > li > a {
+        padding-top: 40px;
+        padding-bottom: 15px;
+        padding-left: 40px;
+    }
 }
 
 /* Set padding to keep content from hitting the edges */
