add client side validation for filesize

--- a/Learny/Views/Document/UploadDocument.cshtml
+++ b/Learny/Views/Document/UploadDocument.cshtml
@@ -14,6 +14,10 @@
     
     <div class="form-horizontal">
         <hr />
+        @Html.HiddenFor(model => model.MaxFileSize, new { id = "maxFileSize" })
+
+        @Html.HiddenFor(model => model.MaxFileSizeKB, new { id = "maxFileSizeKB" })
+
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
         @Html.HiddenFor(model => model.CourseId)
@@ -41,13 +45,14 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Document, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <input type="file" name="Document" id="Document" /> (max @Model.MaxFileSize)
+                <input type="file" name="Document" id="Document" />
+                <span id="fileErrorMessage" class="field-validation-valid text-danger"></span>
             </div>
         </div>
         
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Spara" class="btn btn-default" />
+                <input type="submit" value="Spara" class="btn btn-default" id="submit" />
             </div>
         </div>
     </div>
@@ -59,4 +64,5 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    <script src="~/Scripts/FileSizeCheck.js"></script>
 }
