Change logo size

--- a/Learny/Views/Shared/_Layout.cshtml
+++ b/Learny/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a href="@Url.Action("Index", "Home")">
-                    <img src="~/Images/LearnyLogo.png" alt="Learny" />
+                    <img src="~/Images/LearnyLogoSmall.png" alt="Learny" />
                 </a>
             </div>
             <div class="navbar-collapse collapse">
