--- a/Learny/Views/Courses/Details.cshtml
+++ b/Learny/Views/Courses/Details.cshtml
@@ -52,7 +52,7 @@
         </div>
 
 
-        @if (Model.HaveDocuments)
+        @if (Model.HaveDocuments || User.IsInRole(RoleName.teacher))
         {
             <div class="col-sm-4">
                 <h2>Dokument</h2>
