--- a/Learny/Content/Site.css
+++ b/Learny/Content/Site.css
@@ -1,5 +1,5 @@
 ﻿body {
-    padding-top: 100px;
+    padding-top: 110px;
     /*font: 400 15px Lato, sans-serif;*/
     font-family: 'Roboto' ,sans-serif;
     font-size: 15px;
@@ -22,6 +22,7 @@ h2 {
     border-radius: 0;
     font-family: Montserrat, sans-serif;
     padding: 15px 5px;
+    box-shadow: 0px 5px 20px #808080;
 }
 
     .navbar li a, .navbar .navbar-brand {
