Add color to tabel header

--- a/Learny/Content/Site.css
+++ b/Learny/Content/Site.css
@@ -6,9 +6,11 @@
     color: #202020;
 }
 
-h2 {
-    font-family: 'Roboto',sans-serif;
+.headerRow {
+    background-color: #ca2e2e;
+    color:white;
 }
+
 
 .navbar {
     margin-bottom: 0;
