--- a/Learny/Views/Courses/Index.cshtml
+++ b/Learny/Views/Courses/Index.cshtml
@@ -10,7 +10,7 @@
     @Html.ActionLink("Lägg till kurs", "Create")
 </p>
 <table class="table">
-    <tr>
+    <tr class="headerRow">
         <th>
             @Html.DisplayNameFor(model => model.Name)
         </th>
