--- a/Learny/Views/Account/Login.cshtml
+++ b/Learny/Views/Account/Login.cshtml
@@ -4,24 +4,27 @@
     ViewBag.Title = "Logga in";
 }
 
-<h2>@ViewBag.Title.</h2>
+@*<h2>@ViewBag.Title</h2>*@
+
+
+
 <div class="row">
-    <div class="col-md-8">
-        <section id="loginForm">
+    <div class="col-md-6 col-md-offset-3 loginbox logintextcolor">
+        <section id="loginForm" style="color: white">
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                 @Html.AntiForgeryToken()
-                <hr />
+
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
-                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label logintextcolor" })
                     <div class="col-md-10">
                         @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
                         @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="form-group">
-                    @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+                    @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label logintextcolor" })
                     <div class="col-md-10">
                         @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
                         @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
@@ -32,12 +35,14 @@
                         <div class="checkbox">
                             @Html.CheckBoxFor(m => m.RememberMe)
                             @Html.LabelFor(m => m.RememberMe)
+
+
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Logga in" class="btn btn-default" />
+                        <input type="submit" value="Logga in" class="btn btn-default loginbtn" />
                     </div>
                 </div>
                 @* Enable this once you have account confirmation enabled for password reset functionality
@@ -48,11 +53,12 @@
         </section>
     </div>
     @*<div class="col-md-4">
-        <section id="socialLoginForm">
-            @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
-        </section>
-    </div>*@
+            <section id="socialLoginForm">
+                @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
+            </section>
+        </div>*@
 </div>
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
