Adapting Login style and inserting placholders

--- a/Learny/Views/Courses/ShowSchedule.cshtml
+++ b/Learny/Views/Courses/ShowSchedule.cshtml
@@ -45,7 +45,7 @@
                         if (DateTime.Compare(DateTime.Today, item.CurrentDate.Date) == 0)
                         {
                             @*<li class="alert alert-success">@activity</li>*@
-                            <li><div class="blink"><span>@activity</span></div></li>
+                            <li><div class="blink"><span class="blinkspan">@activity</span></div></li>
                         }
                         else
                         {
