--- a/Learny/Content/Site.css
+++ b/Learny/Content/Site.css
@@ -33,7 +33,7 @@ textarea {
     line-height: 10px;
 }
 
-span {
+.blinkspan {
     font-size: 14px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
