--- a/Learny/Views/Account/Login.cshtml
+++ b/Learny/Views/Account/Login.cshtml
@@ -10,28 +10,30 @@
 
 <div class="row">
     <div class="col-md-6 col-md-offset-3 loginbox logintextcolor">
-        <section id="loginForm" style="color: white">
+        <section id="loginForm">
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                 @Html.AntiForgeryToken()
 
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
-                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label logintextcolor" })
+                   
+                    @Html.LabelFor(m => m.Email, new { @class = "col-md-10 logintextcolor"})
                     <div class="col-md-10">
-                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @placeholder = "Ange e-post som användarnamn" })
                         @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="form-group">
-                    @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label logintextcolor" })
+
+                    @Html.LabelFor(m => m.Password, new { @class = "col-md-10 logintextcolor"})
                     <div class="col-md-10">
-                        @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                        @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Ange lösenord" })
                         @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
+                    <div class="col-md-10">
                         <div class="checkbox">
                             @Html.CheckBoxFor(m => m.RememberMe)
                             @Html.LabelFor(m => m.RememberMe)
@@ -41,7 +43,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
+                    <div class="col-md-10">
                         <input type="submit" value="Logga in" class="btn btn-default loginbtn" />
                     </div>
                 </div>
