--- a/Learny/Views/Document/_DocumentsPartial.cshtml
+++ b/Learny/Views/Document/_DocumentsPartial.cshtml
@@ -5,6 +5,7 @@
     {
         <li>
             @Html.ActionLink(item.DisplayName, "Download", new { id = item.Id }, new { title = item.Description })
+            @Html.ActionLink(" ", "Delete", new { id = item.Id }, new { @class = "glyphicon glyphicon-remove" })
         </li>
     }
 </ul>
