fix nav bar colors

--- a/Learny/Content/Site.css
+++ b/Learny/Content/Site.css
@@ -68,4 +68,11 @@ textarea {
     max-width: 280px;
 }
 
+.navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > .open > a:focus {
+    color: inherit;
+    background-color: inherit;
+}
 
+.logout {
+    background: #202020;
+}
