add restrictions to delete activity

--- a/Learny/Views/ModuleActivities/Delete.cshtml
+++ b/Learny/Views/ModuleActivities/Delete.cshtml
@@ -2,6 +2,11 @@
 
 @{
     ViewBag.Title = "Delete";
+    bool allowDelete = true;
+    if (Model.Documents.Count > 0)
+    {
+        allowDelete = false;
+    }
 }
 
 <h2>Delete</h2>
@@ -65,8 +70,21 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            @if (allowDelete)
+            {
+                <input type="submit" value="Delete" class="btn btn-default" />
+            }
+            else
+            {
+                <input type="submit" value="Ta bort" class="btn btn-default" disabled />
+            }
+            |
             @Html.ActionLink("Back to List", "Index")
+            @if (!allowDelete)
+            {
+                <br />
+                <span class="alert-danger">Den här aktiviteten har dokument kopplat till den.</span>
+            }
         </div>
     }
 </div>
